fix: add source for using script on icons

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
     </footer>
 
-
+    <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 
 </body>
 </html>
