--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./src/styles/main.css">
-    <link rel="stylesheet" href="./src/styles/footer.css">
 </head>
 
 <body>
@@ -110,12 +109,12 @@
     </section>
 
     <!-- Footer -->
-    <div id="footer-placeholder"></div>
+<div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script src="./src/pages/load-components.js"></script>
+    <script src="./src/js/load-components.js"></script>
     <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 
 </body>
