--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./src/styles/main.css">
+    <link rel="stylesheet" href="/src/styles/main.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 
                 <div class="col-12 col-md-6">
                     <div class="section-image">
-                        <img src="./public/images/imagen1.png" alt="Elaboración de café" class="img-fluid">
+                        <img src="/public/images/imagen1.png" alt="Elaboración de café" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-md-6">
                     <div class="section-image">
-                        <img src="./public/images/imagen2.png" alt="Máquina de café" class="img-fluid">
+                        <img src="/public/images/imagen2.png" alt="Máquina de café" class="img-fluid">
                     </div>
                 </div>
                 
@@ -81,7 +81,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-12 mb-4">
                     <div class="section-image mx-auto d-flex justify-content-center">
-                        <img src="./public/images/imagen3.png" alt="Dueños de Lolo's Café" class="img-fluid">
+                        <img src="/public/images/imagen3.png" alt="Dueños de Lolo's Café" class="img-fluid">
                     </div>
                 </div>
 
@@ -114,7 +114,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script src="./src/js/load-components.js"></script>
+    <script src="/src/utils/load-components.js"></script>
     <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 
 </body>
