refactor: restructure project's parts and normalize file/folder names [DEV-RM]

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="hero-banner">
       <div class="hero-text">
-        <img src="/public/images/hero.png" alt="Hero Banner" width="500px" />
+        <img src="/public/images/index/hero.png" alt="Hero Banner" width="500px" />
         <h1>Buen café, sin vueltas</h1>
         <h1>La dosis perfecta de <strong>energía</strong> para tu día.</h1>
         <button>MENÚ</button>
@@ -32,11 +32,11 @@
     <section class="top-drinks section">
       <h4>Los <u>favoritos</u> de la temporada</h4>
       <div class="drinks">
-        <img src="/public/images/drink (1).png" width="80px" />
-        <img src="/public/images/drink (2).png" width="80px" />
-        <img src="/public/images/drink (3).png" width="80px" />
-        <img src="/public/images/drink (4).png" width="80px" />
-        <img src="/public/images/drink (5).png" width="80px" />
+        <img src="/public/images/index/carrousel-pic-1.png" width="80px" />
+        <img src="/public/images/index/carrousel-pic-2.png" width="80px" />
+        <img src="/public/images/index/carrousel-pic-3.png" width="80px" />
+        <img src="/public/images/index/carrousel-pic-4.png" width="80px" />
+        <img src="/public/images/index/carrousel-pic-5.png" width="80px" />
       </div>
     </section>
 
@@ -51,7 +51,7 @@
           Cada café, postre y detalle está pensado para que cada visita se
           disfrute sin prisas.
         </p>
-        <img src="/public/images/imagen3.png" width="200px" /> <br />
+        <img src="/public/images/index/owners.png" width="200px" /> <br />
         <button>CONOCE NUESTRA HISTORIA</button>
       </div>
     </section>
@@ -62,19 +62,19 @@
 
       <div class="desserts">
         <div class="dessert-card">
-          <img src="/public/images/dessert1.png" width="120px" />
+          <img src="/public/images/index/cheescake.png" width="120px" />
           <h3>Cheesecake</h3>
           <p>Intenso, cremoso, sin disculpas.</p>
         </div>
 
         <div class="dessert-card">
-          <img src="/public/images/dessert1.png" width="120px" />
+          <img src="/public/images/index/pay-lotus.png" width="120px" />
           <h3>Pay Lotus</h3>
           <p>Dulce, especiado, adictivo.</p>
         </div>
 
         <div class="dessert-card">
-          <img src="/public/images/dessert1.png" width="120px" />
+          <img src="/public/images/index/rol-de-canela.png" width="120px" />
           <h3>Rol de Canela</h3>
           <p>Suave, irresistible, recién hecho.</p>
         </div>
@@ -82,7 +82,7 @@
     </section>
 
     <section class="reviews section">
-      <img src="/public/images/review.png" width="200px" />
+      <img src="/public/images/index/review.png" width="200px" />
       <div class="review-text">
         <h2>Experiencias que se comparten</h2>
         <p>
