fix: update internal links on index page [DEV-RM]

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Buen café, sin vueltas</h1>
         <h1>La dosis perfecta de <strong>energía</strong> para tu día.</h1>
         <button>MENÚ</button>
-        <img src="" alt="" />
+        <img src="/basic-menu.html" alt="" />
       </div>
     </section>
 
