fix: update menu button link on index page and adjust comment [DEV-RM]

--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
     <!-- Header -->
     <div id="header-placeholder"></div>
 
-    <!-- Aquí va el contenido de la página bbs-->
+    <!-- Page content goes here -->
 
     <section class="hero-banner">
       <div class="hero-text">
         <img src="/public/images/index/hero.png" alt="Hero Banner" width="500px" />
         <h1>Buen café, sin vueltas</h1>
         <h1>La dosis perfecta de <strong>energía</strong> para tu día.</h1>
-        <button>MENÚ</button>
-        <img src="/basic-menu.html" alt="" />
+        <a href="/basic-menu.html" class="menu-btn m-5 col-4">MENÚ</a> 
       </div>
     </section>
 
-    <section class="top-drinks section">
+    <section class="top-drinks section mt-2">
       <h4>Los <u>favoritos</u> de la temporada</h4>
       <div class="drinks">
         <img src="/public/images/index/carrousel-pic-1.png" width="80px" />
