refactor: rename js files for better understanding as a controller and ui

--- a/admin-menu-managment.html
+++ b/admin-menu-managment.html
@@ -256,7 +256,7 @@
                                 </div>
                                 
                                 <!-- Choose if you add a dessert or drink -->
-                                <fieldset class="mb-4">
+                                <fieldset class="mb-4 mt-5">
                                     <legend class="h5 fw-bold mb-2">Tipo de producto</legend>
                                     <div class="d-flex gap-4">
                                         <div class="form-check">
@@ -535,10 +535,10 @@
     <script src="/src/js/load-components.js"></script>
 
     <!-- Admin-specific JS -->
-    <script src="/src/js/admin-menu-managment.js" defer></script>
+    <script src="/src/js/admin-menu.ui.js" defer></script>
 
     <!-- Logic forms  -->
-    <script src="/src/js/adminMenu.js" type="module"></script>
+    <script src="/src/js/admin-menu.controller.js" type="module"></script>
 
 </body>
 </html>
