[DT-129]refactor: renaming files and adding subdirectories[DEV-AA]

--- a/menu/with-coffee.html
+++ b/menu/with-coffee.html
@@ -75,16 +75,12 @@
 
 
     <div class="d-flex w-100 text-center top-buttons container" >
-      <a href="with-coffe.html" class="flex-fill btn btn-dark rounded-0">CON CAFÉ</a>
-      <a href="without-coffe.html" class="flex-fill btn btn-outline-dark rounded-0">SIN CAFÉ</a>
-      <a href="desserts.html" class="flex-fill btn btn-outline-dark rounded-0">POSTRES</a>
+      <a href="/menu/with-coffee.html" class="flex-fill btn btn-dark rounded-0">CON CAFÉ</a>
+      <a href="/menu/without-coffee.html" class="flex-fill btn btn-outline-dark rounded-0">SIN CAFÉ</a>
+      <a href="/menu/desserts.html" class="flex-fill btn btn-outline-dark rounded-0">POSTRES</a>
     </div>
 
-    <!-- <nav>
-      <a href="menu-advance-with-coffe.html">CON CAFÉ</a>
-      <a href="menu-advance-without-coffe.html.html">SIN CAFÉ</a>
-      <a href="/menu-advance-desserts.html.html">POSTRES</a>
-    </nav> -->
+
 
     <!-- Section -->
 
@@ -355,7 +351,7 @@
   <div id="footer-placeholder"></div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  <script src="/src/js/load-components.js"></script>
+  <script src="/src/js/loadComponents.js"></script>
   <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 </body>
 
