--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -15,27 +15,8 @@
 
     <!-- Content -->
     <main class="row container-fluid mx-auto">
-      <section class="admin-sidebar-container col-3 p-3 border-end">
-        <div class="py-5 px-3">
-          <a href="/" class="navbar-brand">
-            <img src="/public/logos/loloscafe-vector.svg" class="mb-3" alt="Lolo's Café Logo"/>
-          </a>
-          <h3>Admin</h3>
-        </div>
-
-        <div class="nav-admin-sidebar px-3">
-          <ul class="navbar-nav mx-auto mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Dashboard</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about-us.html">Gestión de productos</a>
-            </li>
-          </ul>
-        </div>
+      <section id="sidebar-placeholder" class="admin-sidebar-container col-3 p-3 border-end">
+        
       </section>
 
       <section class="dashboard-admin col-9 p-3 container">
@@ -223,7 +204,7 @@
   <div id="footer-placeholder"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  <script src="/src/js/load-components.js"></script>
+  <script src="/src/js/loadComponents.js"></script>
   <script src="/src/js/adminMenu.js" type="module"></script>
   <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 </body>
