--- a/menu/delivery-method.html
+++ b/menu/delivery-method.html
@@ -50,7 +50,7 @@
                         <div class="card card-body border-0 p-0">
 
                             <div class="text-center mb-3">
-                                <a href="./signup-full.html" class="text-dark fw-bold">Inicia sesión</a> y obtén beneficios <br> o <br>
+                                <a href="./contact-details.html" class="text-dark fw-bold">Inicia sesión</a> y obtén beneficios <br> o <br>
                                 Continua sin cuenta
                             </div>
 
@@ -79,7 +79,7 @@
                         <div class="card card-body border-0 p-0">
 
                             <div class="text-center mb-3">
-                                <a href="./signup-full.html" class="text-dark fw-bold">Inicia sesión</a> y obtén beneficios <br> o <br>
+                                <a href="./contact-details.html" class="text-dark fw-bold">Inicia sesión</a> y obtén beneficios <br> o <br>
                                 Continua sin cuenta
                             </div>
 
@@ -181,8 +181,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script src="/src/utils/load-components.js"></script>
-    <script src="/src/utils/validation-signup.js"></script>
+    <script src="/src/utils/loadComponents.js"></script>
+    <script src="/src/utils/validationSignup.js"></script>
     <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 </body>
 
