chore: addition corrrect route

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://tu-proyecto.netlify.app">
+  <meta http-equiv="refresh" content="0; url=https://lolos-cafe-dev.netlify.app/">
   <title>Redirigiendo...</title>
-  <link rel="canonical" href="https://tu-proyecto.netlify.app">
+  <link rel="canonical" href="https://lolos-cafe-dev.netlify.app/">
 </head>
 <body>
   <p>Redirigiendo al nuevo sitio…</p>
