--- a/menu/delivery-method.html
+++ b/menu/delivery-method.html
@@ -121,7 +121,7 @@
                     <h3 class="fw-bold mb-4"><i class="bi bi-cart"></i> Tu orden</h3>
 
                     <div class="d-flex mb-3 align-items-center position-relative">
-                        <img src="./public/images/delivery-method/delivery-method-red-drink-presentation.jpg" alt="Bebida Roja" class="me-3 rounded" width="200">
+                        <img src="/public/images/delivery-method/delivery-method-red-drink-presentation.jpg" alt="Bebida Roja" class="me-3 rounded" width="200">
                         <span
                             class="position-absolute top-0 start-0 translate-middle badge rounded-pill bg-secondary">1</span>
                         <div>
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="d-flex mb-5 align-items-center position-relative">
-                        <img src="./public/images/delivery-method/delivery-method-coffe-presentation.jpg" alt="Latte" class="me-3 rounded" width="200">
+                        <img src="/public/images/delivery-method/delivery-method-coffe-presentation.jpg" alt="Latte" class="me-3 rounded" width="200">
                         <span
                             class="position-absolute top-0 start-0 translate-middle badge rounded-pill bg-secondary">2</span>
                     </div>
@@ -152,7 +152,7 @@
                     <h3 class="fw-bold mb-3">¡Pedido confirmado con éxito!</h3>
 
                     <div class="mb-3">
-                        <img src="public\images\delivery-method\coffee.svg"
+                        <img src="/public/images/delivery-method/coffee.svg"
                             height="80">
                     </div>
 
