[DT-17] fix: padding on footer icons and an hyperling added to inndicate the adress with the direction of lolos

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <!-- Carousel Drinks -->
 <section class="carousel">
     <div class="container">
-      <p class="mb-4">Los <strong><u>favoritos</u></strong> de la temporada</p>
+      <h3 class="mb-4">Los <strong><u>favoritos</u></strong> de la temporada</h3>
 
 <div class="carousel">
 
