--- a/signup/signup.html
+++ b/signup/signup.html
@@ -17,7 +17,6 @@
     <!-- Page Title -->
     <section class="container page-title section-white">
         <div class="row align-items-center flex-nowrap">
-
             <div class="col-auto">
                 <a href="#" class="back-btn">←</a>
             </div>
@@ -25,7 +24,6 @@
             <div class="col-auto d-flex align-items-center">
                 <h1 class="mb-0">Registro</h1>
             </div>
-
         </div>
     </section>
 
@@ -42,131 +40,117 @@
             <div class="col-md-6 offset-md-3 registration-form-complete">
                 <p class="registration-subtitle">Regístrate para obtener beneficios con cada compra</p>
 
-                <form action="https://formspree.io/f/xzddzgdp" method="POST" enctype="multipart/form-data"
-                    name="registration-form-complete" accept-charset="utf-8">
-                    <!-- Conexion with FormSpree -->
+                <form action="https://formspree.io/f/xzddzgdp"
+                    method="POST"
+                    name="registration-form-complete"
+                    novalidate>
 
-                    <!-- Name -->
-                    <div class="form-group">
-                        <label for="name">Nombre</label>
-                        <input type="text" id="name" name="name" placeholder="Sergio" required>
+                <!-- Nombre -->
+                <div class="mb-3">
+                    <label for="name" class="form-label">Nombre</label>
+                    <input type="text" id="name" name="name"
+                        class="form-control"
+                        placeholder="Sergio" required>
+                    <div class="invalid-feedback">
+                        Ingresa un nombre válido (solo letras).
                     </div>
+                </div>
 
-                    <!-- Last Name -->
-                    <div class="form-group">
-                        <label for="last-name">Apellido</label>
-                        <input type="text" id="last-name" name="last-name" placeholder="Pérez" required>
+                <!-- Apellido -->
+                <div class="mb-3">
+                    <label for="last-name" class="form-label">Apellido</label>
+                    <input type="text" id="last-name" name="last-name"
+                        class="form-control"
+                        placeholder="Pérez" required>
+                    <div class="invalid-feedback">
+                        Ingresa un apellido válido (solo letras).
                     </div>
+                </div>
 
-                    <!-- Phone -->
-                    <div class="form-group">
-                        <label for="phone">Número de teléfono</label>
-                        <input type="tel" id="phone" name="phone" placeholder="2211231234" required>
+                <!-- Teléfono -->
+                <div class="mb-3">
+                    <label for="phone" class="form-label">Número de teléfono</label>
+                    <input type="tel" id="phone" name="phone"
+                        class="form-control"
+                        placeholder="2211231234" required>
+                    <div class="invalid-feedback">
+                        El teléfono debe tener 10 dígitos.
                     </div>
+                </div>
 
-                    <!-- Email -->
-                    <div class="form-group">
-                        <label for="email">Correo electrónico</label>
-                        <input type="email" id="email" name="email" placeholder="email@ejemplo.com" required>
+                <!-- Email -->
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo electrónico</label>
+                    <input type="email" id="email" name="email"
+                        class="form-control"
+                        placeholder="email@ejemplo.com" required>
+                    <div class="invalid-feedback">
+                        Correo electrónico no válido.
                     </div>
+                </div>
 
-                    <!-- Contraseña -->
-                    <div class="form-group">
-                        <label for="password">Contraseña</label>
-                        <input type="password" id="password" name="password" placeholder="Contraseña segura" required>
+                <!-- Contraseña -->
+                <div class="mb-3">
+                    <label for="password" class="form-label">Contraseña</label>
+                    <input type="password" id="password" name="password"
+                        class="form-control" required>
+                    <div class="invalid-feedback">
+                        Mínimo 8 caracteres. Al menos una letra y un número.
                     </div>
+                </div>
 
-                    <!-- Contraseña -->
-                    <div class="form-group">
-                        <label for="confirm-password">Confirmar contraseña</label>
-                        <input type="password" id="confirm-password" name="confirm-password"
-                            placeholder="Confirmar contraseña segura" required>
+                <!-- Confirmar Contraseña -->
+                <div class="mb-3">
+                    <label for="confirm-password" class="form-label">Confirmar contraseña</label>
+                    <input type="password" id="confirm-password"
+                        class="form-control" required>
+                    <div class="invalid-feedback">
+                        Las contraseñas no coinciden.
                     </div>
+                </div>
 
-                    <!-- Birth Date -->
-                    <div class="form-group">
-                        <label for="birthdate">Fecha de nacimiento</label>
-                        <input type="date" id="birthdate" name="birthdate" required>
+                <!-- Fecha nacimiento -->
+                <div class="mb-3">
+                    <label for="birthdate" class="form-label">Fecha de nacimiento</label>
+                    <input type="date" id="birthdate"
+                        class="form-control" required>
+                    <div class="invalid-feedback">
+                        Debes ser mayor de 18 años.
                     </div>
+                </div>
 
-                    <!-- Gender -->
-                    <div class="form-group">
-                        <label for="gender">Género</label>
-                        <select class="gender p-2" id="gender" name="gender" required>
-                            <option value="">Selecciona</option>
-                            <option value="masculino">Masculino</option>
-                            <option value="femenino">Femenino</option>
-                            <option value="otro">Otro</option>
-                            <option value="prefiero-no">Prefiero no responder</option>
-                        </select>
+                <!-- Género -->
+                <div class="mb-3">
+                    <label for="gender" class="form-label">Género</label>
+                    <select id="gender" name="gender"
+                            class="form-select" required>
+                    <option value="">Selecciona</option>
+                    <option value="masculino">Masculino</option>
+                    <option value="femenino">Femenino</option>
+                    <option value="otro">Otro</option>
+                    <option value="prefiero-no">Prefiero no responder</option>
+                    </select>
+                    <div class="invalid-feedback">
+                        Selecciona una opción.
                     </div>
+                </div>
 
-                    <!-- Checkbox Privacy -->
-                    <div class="form-check d-flex justify-content-center">
-                        <input type="checkbox" id="privacy" name="privacy" required>
-                        <label for="privacy">He leído y acepto el <a href="#">aviso de privacidad</a></label>
+                <!-- Privacidad -->
+                <div class="form-check mb-3 text-center">
+                    <input class="form-check-input" type="checkbox" id="privacy">
+                    <label class="form-check-label" for="privacy">
+                        He leído y acepto el <a href="#">aviso de privacidad</a>
+                    </label>
+                    <div class="invalid-feedback">
+                        Debes aceptar el aviso de privacidad.
                     </div>
+                </div>
 
-                    <!-- Recovery Password link -->
-                    <p class="d-flex justify-content-center">
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#modalRecovery">¿Olvidaste tu contraseña?</a>
-                    </p>
-
-                    <!-- MODAL -->
-                    <div class="modal fade" id="modalRecovery" tabindex="-1">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content p-4">
-
-                                <!-- Close button -->
-                                <div class="d-flex justify-content-end">
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                                </div>
-
-                                <!-- Title of close button -->
-                                <div class="text-center mt-2 mb-3">
-                                    <h2 class="fw-bolder">Recuperar contraseña</h2>
-                                    <p class="text-muted">
-                                        Ingresa el correo electrónico asociado a tu cuenta
-                                    </p>
-                                </div>
-
-                                <!-- Form of close button -->
-                                <form>
-
-                                    <!-- LABEL -->
-                                    <div class="mb-3">
-                                        <label class="form-label">Correo electrónico</label>
-
-                                        <div class="input-group">
-                                            <input type="email" class="form-control" placeholder="email@ejemplo.com">
-                                        </div>
-                                    </div>
-
-                                    <!-- LINK LOGIN -->
-                                    <div class="text-center mb-4">
-                                        <a href="#" class="text-decoration-line text-black small">
-                                            Inicio de sesión
-                                        </a>
-                                    </div>
-
-                                    <!-- button -->
-                                    <div class="d-grid">
-                                        <button type="submit" class="btn btn-outline-dark py-2">
-                                            ENVIAR CÓDIGO →
-                                        </button>
-                                    </div>
-
-                                </form>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Submit Button -->
-                    <div class="register-btn">
-                        <button class="menu-btn form-btn" type="submit">REGISTRARME →</button>
-                    </div>
-
+                <!-- Botón -->
+                <div class="register-btn">
+                    <button type="submit" id="submit-btn" class="btn btn-dark w-100"> REGISTRARME →
+                    </button>
+                </div>
                 </form>
 
                 <!-- Login Link -->
@@ -182,7 +166,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script type="module" src="/src/js/utils/loadComponents.js"></script>
+    <script src="/src/js/utils/loadComponents.js"></script>
     <script src="/src/js/validators/validationContactDetails.js"></script>
     <script src="https://animatedicons.co/scripts/embed-animated-icons.js"></script>
 
