fix: home redirection

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -18,7 +18,7 @@
     <section class="container page-title section-white">
         <div class="row align-items-center flex-nowrap">
             <div class="col-auto">
-                <a href="#" class="back-btn">←</a>
+                <a href="/index.html" class="back-btn">←</a>
             </div>
 
             <div class="col-auto d-flex align-items-center">
