--- a/signup/signup.html
+++ b/signup/signup.html
@@ -40,7 +40,7 @@
             <div class="col-md-6 offset-md-3 registration-form-complete">
                 <p class="registration-subtitle">Regístrate para obtener beneficios con cada compra</p>
 
-                <form action="https://formspree.io/f/mlgnpdrd"
+                <form action="https://formspree.io/f/mwvbrvgg"
                     method="POST"
                     name="registration-form-complete"
                     novalidate>
