--- a/faqs.html
+++ b/faqs.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preguntas Frecuentes - Lolo's Café</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/src/styles/main.css"/>
 </head>
+
 <body>
     <!-- Header -->
     <div id="header-placeholder"></div>
-    
-    <!-- Page content goes here -->
     <section class="container py-1 py-md-1 align-items-center">
-        <!-- Section name, title, and arrow -->
         <section class="container page-title section-white p-0 m-0">
             <div class="row align-items-center my-0 ms-n2 g-3">
                 <div class="col-auto ms-n5">
-                    <a href="#" class="back-btn">←</a>
+                    <a href="/index.html" class="back-btn">←</a>
                 </div>
                 <div class="col-auto d-flex align-items-center">
                     <h1 class="mb-0">Preguntas Frecuentes</h1>
@@ -25,47 +24,159 @@
             </div>
         </section>
         <p class="text-muted mb-4">Todo lo que necesitas saber antes de tu visita o pedido.</p>
-        <!-- FAQ LIST -->
-        <div class="vstack gap-4">
+        <!-- FAQ Accordion -->
+        <div class="accordion accordion-flush" id="faqAccordion">
             <!-- FAQ 1 -->
-            <div class="d-flex flex-column flex-sm-row align-items-start gap-3 py-3 border-bottom">
-                <img src="/public/images/faq-page/icon-faq-1.png" alt="Eventos"
-                    class="img-fluid mx-auto mx-sm-0">
-                <div class="text-center text-sm-start">
-                    <h5 class="fw-semibold mb-1">¿Se pueden realizar eventos en el café?</h5>
-                    <p class="text-muted mb-0">Sí, es posible organizar eventos pequeños. Recomendamos acercarte directamente al café o llamarnos por teléfono para revisar disponibilidad y detalles.
-                    </p>
+            <div class="accordion-item border-bottom py-2">
+                <h2 class="accordion-header" id="faq-h-1">
+                <button
+                    class="accordion-button collapsed px-0 d-flex align-items-center gap-3"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#faq-c-1"
+                    aria-expanded="false"
+                    aria-controls="faq-c-1"
+                >
+                    <img src="/public/images/faq-page/icon-faq-1.png" alt="Eventos" class="img-fluid" style="max-width:56px;">
+                    <span class="fw-semibold flex-grow-1 text-start">
+                    ¿Los precios del sitio son los mismos que en la cafetería?
+                    </span>
+                    <i class="bi bi-plus-lg"></i>
+                </button>
+                </h2>
+
+                <div id="faq-c-1" class="accordion-collapse collapse" aria-labelledby="faq-h-1" data-bs-parent="#faqAccordion">
+                <div class="accordion-body ps-0">
+                    Sí. Nuestro menú en linea está 
+                </div>
                 </div>
             </div>
+            <!-- FAQ 1 -->
+            <div class="accordion-item border-bottom py-2">
+                <h2 class="accordion-header" id="faq-h-1">
+                <button
+                    class="accordion-button collapsed px-0 d-flex align-items-center gap-3"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#faq-c-1"
+                    aria-expanded="false"
+                    aria-controls="faq-c-1"
+                >
+                    <img src="/public/images/faq-page/icon-faq-1.png" alt="Eventos" class="img-fluid" style="max-width:56px;">
+                    <span class="fw-semibold flex-grow-1 text-start">
+                    ¿Puedo modificar mi pedido después de enviarlo?
+                    </span>
+                    <i class="bi bi-plus-lg"></i>
+                </button>
+                </h2>
+
+                <div id="faq-c-1" class="accordion-collapse collapse" aria-labelledby="faq-h-1" data-bs-parent="#faqAccordion">
+                <div class="accordion-body ps-0">
+                    Sí. Puedes contactarnos para 
+                </div>
+                </div>
+            </div>
+            <!-- FAQ 1 -->
+            <div class="accordion-item border-bottom py-2">
+                <h2 class="accordion-header" id="faq-h-1">
+                <button
+                    class="accordion-button collapsed px-0 d-flex align-items-center gap-3"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#faq-c-1"
+                    aria-expanded="false"
+                    aria-controls="faq-c-1"
+                >
+                    <img src="/public/images/faq-page/icon-faq-1.png" alt="Eventos" class="img-fluid" style="max-width:56px;">
+                    <span class="fw-semibold flex-grow-1 text-start">
+                    ¿Se pueden realizar eventos en el café?
+                    </span>
+                    <i class="bi bi-plus-lg"></i>
+                </button>
+                </h2>
+
+                <div id="faq-c-1" class="accordion-collapse collapse" aria-labelledby="faq-h-1" data-bs-parent="#faqAccordion">
+                <div class="accordion-body ps-0">
+                    Sí, es posible organizar eventos pequeños. Recomendamos acercarte directamente al café o llamarnos por teléfono para revisar disponibilidad y detalles.
+                </div>
+                </div>
+            </div>
+
             <!-- FAQ 2 -->
-            <div class="d-flex flex-column flex-sm-row align-items-start gap-3 py-3 border-bottom">
-                <img src="/public/images/faq-page/icon-faq-2.png" alt="Mascotas"
-                    class="img-fluid mx-auto mx-sm-0" >
-                <div class="text-center text-sm-start">
-                    <h5 class="fw-semibold mb-1">¿Se aceptan mascotas?</h5>
-                    <p class="text-muted mb-0">Sí, las mascotas son bienvenidas siempre que estén con correa y bajo
-                        supervisiónde sus dueños, para que todas las personas puedan disfrutar del espacio cómodamente.
-                    </p>
+            <div class="accordion-item border-bottom py-2">
+                <h2 class="accordion-header" id="faq-h-2">
+                <button
+                    class="accordion-button collapsed px-0 d-flex align-items-center gap-3"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#faq-c-2"
+                    aria-expanded="false"
+                    aria-controls="faq-c-2"
+                >
+                    <img src="/public/images/faq-page/icon-faq-2.png" alt="Mascotas" class="img-fluid" style="max-width:56px;">
+                    <span class="fw-semibold flex-grow-1 text-start">
+                    ¿Se aceptan mascotas?
+                    </span>
+                    <i class="bi bi-plus-lg"></i>
+                </button>
+                </h2>
+
+                <div id="faq-c-2" class="accordion-collapse collapse" aria-labelledby="faq-h-2" data-bs-parent="#faqAccordion">
+                <div class="accordion-body ps-0">
+                    Sí, las mascotas son bienvenidas siempre que estén con correa y bajo supervisión de sus dueños, para que todas las personas puedan disfrutar del espacio cómodamente.
+                </div>
                 </div>
             </div>
+
             <!-- FAQ 3 -->
-            <div class="d-flex flex-column flex-sm-row align-items-start gap-3 py-3 border-bottom">
-                <img src="/public/images/faq-page/icon-faq-3.png" alt="Ajustes bebida"
-                    class="img-fluid mx-auto mx-sm-0">
-                <div class="text-center text-sm-start">
-                    <h5 class="fw-semibold mb-1">¿Puedo pedir ajustes en mi bebida?</h5>
-                    <p class="text-muted mb-0">Sí, puedes solicitar ajustes sencillos como sin azúcar o pedir sustitutos como leche vegetal o poco hielo. Estos se pueden indicar en la nota del pedido y están sujetos a disponibilidad.
-                    </p>
+            <div class="accordion-item border-bottom py-2">
+                <h2 class="accordion-header" id="faq-h-3">
+                <button
+                    class="accordion-button collapsed px-0 d-flex align-items-center gap-3"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#faq-c-3"
+                    aria-expanded="false"
+                    aria-controls="faq-c-3"
+                >
+                    <img src="/public/images/faq-page/icon-faq-3.png" alt="Ajustes bebida" class="img-fluid" style="max-width:56px;">
+                    <span class="fw-semibold flex-grow-1 text-start">
+                    ¿Puedo pedir ajustes en mi bebida?
+                    </span>
+                    <i class="bi bi-plus-lg"></i>
+                </button>
+                </h2>
+
+                <div id="faq-c-3" class="accordion-collapse collapse" aria-labelledby="faq-h-3" data-bs-parent="#faqAccordion">
+                <div class="accordion-body ps-0">
+                    Sí, puedes solicitar ajustes sencillos como sin azúcar o pedir sustitutos como leche vegetal o poco hielo. Estos se pueden indicar en la nota del pedido y están sujetos a disponibilidad.
+                </div>
                 </div>
             </div>
+
             <!-- FAQ 4 -->
-            <div class="d-flex flex-column flex-sm-row align-items-start gap-3 py-3 border-bottom">
-                <img src="/public/images/faq-page/icon-faq-4.png" alt="Pagos"
-                    class="img-fluid mx-auto mx-sm-0">
-                <div class="text-center text-sm-start">
-                    <h5 class="fw-semibold mb-1">¿Aceptan pagos con tarjeta o transferencias?</h5>
-                    <p class="text-muted mb-0">Sí, aceptamos pagos con tarjeta y otros métodos disponibles en el café. Para más detalles, puedes preguntarnos directamente.
-                    </p>
+            <div class="accordion-item border-bottom py-2">
+                <h2 class="accordion-header" id="faq-h-4">
+                <button
+                    class="accordion-button collapsed px-0 d-flex align-items-center gap-3"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#faq-c-4"
+                    aria-expanded="false"
+                    aria-controls="faq-c-4"
+                >
+                    <img src="/public/images/faq-page/icon-faq-4.png" alt="Pagos" class="img-fluid" style="max-width:56px;">
+                    <span class="fw-semibold flex-grow-1 text-start">
+                    ¿Aceptan pagos con tarjeta o transferencias?
+                    </span>
+                    <i class="bi bi-plus-lg"></i>
+                </button>
+                </h2>
+
+                <div id="faq-c-4" class="accordion-collapse collapse" aria-labelledby="faq-h-4" data-bs-parent="#faqAccordion">
+                <div class="accordion-body ps-0">
+                    Sí, aceptamos pagos con tarjeta y otros métodos disponibles en el café. Para más detalles, puedes preguntarnos directamente en barra.
+                </div>
                 </div>
             </div>
         </div>
