feat: refine admin structure and improve UI behavior [DEV-RC]

--- a/admin/configuration.html
+++ b/admin/configuration.html
@@ -15,92 +15,6 @@
 
     <link rel="stylesheet" href="/src/styles/main.css" />
 
-    <style>
-        .admin-sidebar-container {
-            background: #fff;
-        }
-
-        .dashboard-admin h3,
-        .dashboard-admin h4 {
-            font-weight: 600;
-        }
-
-        .nav-top-buttons {
-            display: flex;
-            gap: 0;
-        }
-
-        .nav-top-buttons .nav-item {
-            flex: 1 1 0;
-        }
-
-        .nav-top-buttons .nav-link {
-            border: 1px solid #222;
-            border-radius: 0 !important;
-            color: #222;
-            width: 100%;
-            letter-spacing: .3px;
-        }
-
-        .nav-top-buttons .nav-item+.nav-item .nav-link {
-            border-left: 0;
-        }
-
-        .nav-top-buttons .nav-link.active,
-        .nav-top-buttons .nav-link[aria-selected="true"] {
-            background: #222;
-            color: #fff !important;
-            border-color: #222 !important;
-        }
-
-        .card-settings {
-            border: 1px solid #e9ecef;
-        }
-
-        @media (min-width: 992px) {
-            .save-bar {
-                position: sticky;
-                bottom: 0;
-                z-index: 1;
-                background: #fff;
-                border-top: 1px solid #eee;
-                padding: 1rem 0;
-            }
-        }
-
-        .form-label .bi {
-            opacity: 0.7;
-            margin-right: .25rem;
-        }
-
-        #tabla-horarios th:nth-child(1),
-        #tabla-horarios td:nth-child(1) {
-            width: 28%;
-        }
-
-        #tabla-horarios th:nth-child(2),
-        #tabla-horarios td:nth-child(2) {
-            width: 14%;
-        }
-
-        #tabla-horarios th:nth-child(3),
-        #tabla-horarios td:nth-child(3) {
-            width: 29%;
-        }
-
-        #tabla-horarios th:nth-child(4),
-        #tabla-horarios td:nth-child(4) {
-            width: 29%;
-        }
-
-        #tabla-horarios td {
-            vertical-align: middle;
-        }
-
-        #tabla-horarios input[type="time"] {
-            max-width: 180px;
-        }
-    </style>
 </head>
 
 <body>
@@ -370,121 +284,8 @@
     <script type="module" src="/src/js/utils/loadComponents.js"></script>
 
     <!-- Page-specific logic (kept inline to make this a single-file example) -->
-    <script>
-        // ===== Utility: Bootstrap toast helper =====
-        const toastEl = document.getElementById('saveToast');
-        const toast = toastEl ? new bootstrap.Toast(toastEl) : null;
+    <script type="module" src="/src/js/admin/configuration.js"></script>
 
-        // ===== INFO: client-side validation + save to localStorage (all required) =====
-        document.getElementById('save-info')?.addEventListener('click', () => {
-            const form = document.getElementById('form-info');
-            if (!form.checkValidity()) {
-                form.classList.add('was-validated');
-                return;
-            }
-            const payload = {
-                name: document.getElementById('biz-name').value.trim(),
-                email: document.getElementById('biz-email').value.trim(),
-                phone1: document.getElementById('phone-1').value.trim(),
-                phone2: document.getElementById('phone-2').value.trim(),
-                address: document.getElementById('address').value.trim(),
-                website: document.getElementById('website').value.trim(),
-                instagram: document.getElementById('instagram').value.trim(),
-                notes: document.getElementById('notes').value.trim(),
-            };
-            localStorage.setItem('lolos_config_info', JSON.stringify(payload));
-            toast?.show();
-        });
-
-        // ===== HOURS: render rows for each day, keep columns aligned, simple open/close per day =====
-        const DIAS = ["Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado", "Domingo"];
-        const tbody = document.querySelector('#tabla-horarios tbody');
-
-        // Builds a single row for the "hours" table
-        function crearFila(dia, index) {
-            const tr = document.createElement('tr');
-            tr.innerHTML = `
-        <td class="fw-medium">${dia}</td>
-        <td>
-            <div class="form-check form-switch m-0">
-            <input class="form-check-input toggle-abierto" type="checkbox" id="abierto-${index}" ${index === 6 ? '' : 'checked'}>
-            <label class="visually-hidden" for="abierto-${index}">Abierto</label>
-            </div>
-        </td>
-        <td>
-            <input type="time" class="form-control form-control-sm rounded-0 hora-apertura" value="08:00">
-        </td>
-        <td>
-            <input type="time" class="form-control form-control-sm rounded-0 hora-cierre" value="20:00">
-        </td>
-        `;
-            return tr;
-        }
-
-        // Render table rows and wire up behaviors
-        if (tbody) {
-            DIAS.forEach((d, i) => tbody.appendChild(crearFila(d, i)));
-
-            // Enable/disable time inputs when "Abierto" changes
-            const updateRowDisabled = (row) => {
-                const abierto = row.querySelector('.toggle-abierto').checked;
-                row.querySelectorAll('input[type="time"]').forEach(inp => inp.disabled = !abierto);
-            };
-
-            // Initialize all rows
-            [...tbody.rows].forEach(row => {
-                updateRowDisabled(row);
-                row.querySelector('.toggle-abierto').addEventListener('change', () => updateRowDisabled(row));
-            });
-
-            // Copy Monday schedule to the rest of the week
-            document.getElementById('btn-copiar-lunes')?.addEventListener('click', () => {
-                const lunes = tbody.rows[0];
-                const abierto = lunes.querySelector('.toggle-abierto').checked;
-                const open = lunes.querySelector('.hora-apertura').value;
-                const close = lunes.querySelector('.hora-cierre').value;
-
-                [...tbody.rows].forEach((r, idx) => {
-                    if (idx === 0) return;
-                    r.querySelector('.toggle-abierto').checked = abierto;
-                    r.querySelector('.hora-apertura').value = open;
-                    r.querySelector('.hora-cierre').value = close;
-                    updateRowDisabled(r);
-                });
-            });
-
-            // Mark all days as closed
-            document.getElementById('btn-cerrar-todos')?.addEventListener('click', () => {
-                [...tbody.rows].forEach(r => {
-                    r.querySelector('.toggle-abierto').checked = false;
-                    updateRowDisabled(r);
-                });
-            });
-        }
-
-        // Save hours configuration to localStorage
-        document.getElementById('save-hours')?.addEventListener('click', () => {
-            const datos = [...tbody.rows].map((r, idx) => ({
-                dia: DIAS[idx],
-                abierto: r.querySelector('.toggle-abierto').checked,
-                apertura: r.querySelector('.hora-apertura').value || null,
-                cierre: r.querySelector('.hora-cierre').value || null,
-            }));
-            localStorage.setItem('lolos_config_hours', JSON.stringify(datos));
-            toast?.show();
-        });
-
-        // ===== NOTIFICATIONS (simple switches like your mock) =====
-        document.getElementById('save-notifs')?.addEventListener('click', () => {
-            const payload = {
-                stockLow: document.getElementById('notif-stock').checked,
-                promosExpiring: document.getElementById('notif-promos').checked,
-                newOrders: document.getElementById('notif-orders').checked,
-            };
-            localStorage.setItem('lolos_config_alerts', JSON.stringify(payload));
-            toast?.show();
-        });
-    </script>
 </body>
 
 </html>
